noinst_LTLIBRARIES = libingen_shared.la

libingen_shared_la_CXXFLAGS = \
	@GLIBMM_CFLAGS@ \
	@INGEN_CFLAGS@ \
	@RAUL_CFLAGS@ \
	@REDLANDMM_CFLAGS@ \
	@SLV2_CFLAGS@

libingen_shared_la_SOURCES = \
	Builder.cpp \
	Builder.hpp \
	LV2Features.cpp \
	LV2Features.hpp \
	LV2URIMap.cpp \
	LV2URIMap.hpp \
	OSCSender.cpp \
	OSCSender.hpp \
	Store.cpp \
	Store.hpp
